_sass/academic/_layout.scss
/* ... */
.site-title {
  display: inline-block;
  font-size: 26px;
  font-weight: 300;
  line-height: 55px;
  letter-spacing: -1px;
  margin-bottom: -5px;

  &,
  &:visited {
    color: $grey-color-dark;
  }
  &:hover {
    text-decoration: none;
    border-bottom: 5px $brand-color solid;
  }

  b {
    font-weight: 600;
  }
}

.with-pitch {
  &:hover {
    border-bottom: none;
    color: $brand-color;
  }
}

.site-pitch {
  display: inline-block;
  clear: both;
  line-height: 60px;
  padding-left: 10px;
  color: $grey-color;

  &:before {
    content: " | "
  }

  @include media-query($on-palm) {
    display: block;
    padding-left: 0;
    padding-bottom: 15px;
    line-height: initial;
    color: $grey-color-light;

    &:before {
      content: ""
    }
  }
}


.site-nav {
  float: right;
  line-height: 60px;
  z-index: 1000;

  .menu-icon {
    display: none;
  }

  .nav-list-title {
    display: none;
  }


  .nav-list {
    list-style: none;
    margin: 0;

    li {
      display: inline-block;
      height: 55px;

      .page-link {
        color: $text-color;

        &:hover {
          text-decoration: none;
        }
      }

      // Gaps between nav items, but not on the last one
      &:not(:last-child) {
        margin-right: 15px;
      }

      &:hover {
        border-bottom: 5px $grey-color solid;
      }

      @include media-query($on-palm) {
        height: auto;
        line-height: normal;

        &:nth-child(n+0) {
          margin: 0;
          height: auto;
          padding: 0 10px 0px;
        }

        a {
          margin: 0px;
          padding: 0px;
        }

      }

    }
  }

  @include media-query($on-palm) {
    position: absolute;
    top: 9px;
    right: $spacing-unit / 2;
    background-color: $background-color;
    border: 1px solid $grey-color-light;
    border-radius: 5px;
    text-align: right;
    margin-left: 20px;

    .menu-icon {
      display: block;
      float: right;
      width: 36px;
      height: 26px;
      line-height: 0;
      padding-top: 10px;
      text-align: center;

      > svg path {
        fill: $grey-color-dark;
      }
    }

    .trigger {
      clear: both;
      display: none;
    }

    &:hover .trigger {
      display: block;
      padding-bottom: 5px;
    }

    .nav-list {
      .page-link:hover {
        color: $brand-color;
      }

      li:hover {
        border: none;
      }
    }

    .page-link {
      display: block;
      padding: 5px 10px;

      &:not(:last-child) {
        margin-right: 0;
      }
      margin-left: 20px;
    }
  }
}

/**
 * Site footer
 */

.site-footer {
  @include size(vsmall);
  border-top: 1px solid $grey-color-light;
  color: $grey-color;

  a {
    color: $grey-color;
  }

  .footer-col {
    list-style: none;
    margin-left: 0;
    margin-top: $spacing-unit/2;
    margin-bottom: $spacing-unit;

    .author, .author a {
      color: $grey-color-light;
    }
  }

  .footer-col-1 {
    width: -webkit-calc(65% - (#{$spacing-unit} / 2));
    width:         calc(65% - (#{$spacing-unit} / 2));
    float: left;
  }

  .footer-col-2 {
    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
    width:         calc(35% - (#{$spacing-unit} / 2));
    float: right;
  }

  .single-col {
    clear: both;
    list-style: none;
    margin: 0;
    text-align: center;

    li {
      display: inline-block;
      margin-left: 5px;
      margin-right: 5px;
    }

    .username {
      display: none;
    }

    svg {
      width: 20px;
      height: 20px;
    }

    .icon {
      &:hover {
        circle,
        path:last-of-type {
          fill: $text-color;
        }
      }
    }
  }

  .nav-list-title,
  .contact-list-title {
    display: none;
  }

  .contact-list {
    a .username:hover {
      text-decoration: underline;
    }

    @include media-query($on-palm) {
      margin-bottom: $spacing-unit / 2;
    }
  }

  .bottom {
    color: $grey-color-light;
    width: 100%;
    clear: both;
    float: none;
    text-align: center;
    margin-top: $spacing-unit;
    margin-bottom: $spacing-unit;

    @include media-query($on-palm) {
      margin-top: 0px;
    }

    a {
      color: $grey-color-light;
    }

    .cc-licence {
      text-transform: uppercase;
    }

    .lang-selector {
      display: inline-block;
      list-style: none;
      color: $grey-color;
      margin: $spacing-unit / 4 0 0 0;
      padding: 10px;

      @include media-query($on-palm) {
        text-align: left;
        padding-left: 0px;
        margin: 0px 0px $spacing-unit/2 0px;

        .lang-intro {
          font-weight: bold;
        }
      }

      .lang {
        display: inline-block;
        text-transform: lowercase;

        a {
          color: $grey-color;
        }

        &:nth-child(n+3) {
          &:before {
            content:"|"
          }
        }
      }
    }
  }

}

@include media-query($on-laptop) {
  .site-footer {
    @include size(small);
  }
}

@include media-query($on-palm) {
  .site-footer {
    .footer-col-1,
    .footer-col-2 {
      width:100%;
      float: none;
    }

    .nav-list-title,
    .contact-list-title {
      display: inline;
      font-weight: bold;
    }

    .nav-list {
      margin-top: 0;
    }

    .contact-list {
      text-align: left;
      margin-top: 0;

      li {
        display: block;
      }

      .username {
        display: inline;
      }
    }

    .bottom {
      text-align: left;
    }
  }

}

/**
 * Page content
 */
.page-content {
  padding: $spacing-unit 0 $spacing-unit / 2 0;
}

.post-content {
  padding-bottom: $spacing-unit;
}

.page-heading {
  margin-top: 0;
}

.pitch {
  h2:first-of-type {
    margin-top: 0;
  }
}

.archive {
  margin-top: $spacing-unit;
}
/* ... */

